Заменила размеры секции

--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -2,24 +2,28 @@
 .locations {
     display: block;
     background-color: $color-footer;
-    height: 1287px;
+    height: 1295px;
        @media screen and (min-width: 768px){
         display: flex;
         flex-wrap: wrap;
-
+        height: 540px;
        }
         @media screen and (min-width: 1280px) {
          background-image:
          url('../images/desktop/sectionbd/drops.png');
          background-repeat: no-repeat; 
-         height: 485px;
+         height: 571px;
         }
 }
 
-.container {
+.container {  
+    // @media screen and (min-width: 768px) {
+    // height: 460px;
+
     @media screen and (min-width: 1280px) {
         padding-right: 0;
         padding-left: 0;
+        // height: 485px;
     }
 }
    
@@ -71,8 +75,8 @@
         margin-right: 0;
         height: 544px;
         margin-bottom: 0;
-        padding-right: 32px;
-        padding-left: 32px;
+        padding-right: 27px;
+        padding-left: 27px;
         padding-top: 50px;
         padding-bottom: 50px;
         width: 210px;
@@ -83,7 +87,7 @@
         padding-right: 44px;
         padding-left: 44px;
         padding-top: 50px;
-        padding-bottom: 60px;
+        padding-bottom: 55px;
     }
 }
 
@@ -103,13 +107,13 @@
     @media screen and (min-width: 768px) {
         height: 28px;
         font-size: 16px;
-        padding-top: 5px;
+        padding-top: 3px;
         margin-bottom: 30px;
     }
     @media screen and (min-width: 768px) {
         height: 28px;
         font-size: 16px;
-        padding-top: 5px;
+        padding-top: 3px;
         margin-bottom: 32px;
     }    
 }
@@ -126,13 +130,13 @@
     @media screen and (min-width: 768px) {
         height: 28px;
         font-size: 16px;
-        padding-top: 5px;
+        padding-top: 3px;
         margin-bottom: 30px;
     }
     @media screen and (min-width: 768px) {
         height: 28px;
         font-size: 16px;
-        padding-top: 5px;
+        padding-top: 3px;
         margin-bottom: 32px;
     }
 }
