--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   section {
     max-width: 1280px;
   }
@@ -140,7 +140,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .how-its-made {
     padding: 125px 115px;
     background-repeat: no-repeat;
@@ -172,7 +172,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .subtitle {
     font-size: 30px;
     line-height: 1.13;
@@ -197,7 +197,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .title {
     font-size: 58px;
     line-height: 1.14;
@@ -211,6 +211,12 @@ section {
   padding-top: 26px;
 }
 
+@media screen and (max-width: 767px) {
+  .cow-container {
+    justify-content: center;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .cow-container {
     padding-top: 50px;
@@ -218,7 +224,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .cow-container {
     padding-top: 55px;
   }
@@ -240,7 +246,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .cow-text-content {
     padding-left: 74px;
     padding-top: 55px;
@@ -258,7 +264,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .cow-text-content-list-item {
     margin-bottom: 35px;
   }
@@ -282,7 +288,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .primary-text {
     font-size: 16px;
     line-height: 1.76;
@@ -307,7 +313,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .secondary-text {
     line-height: 1.94;
   }
@@ -337,7 +343,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .fact {
     width: calc(100% / 3);
     margin-right: 0;
@@ -363,7 +369,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .fact-title {
     font-size: 58px;
     margin-bottom: 25px;
@@ -386,7 +392,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .fact-title::before {
     margin-top: 40px;
   }
@@ -424,7 +430,7 @@ section {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .fact-text {
     font-size: 16px;
     line-height: 1.76;
