--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,60 @@ li {
   }
 }
 
+/*---------------- ЗАГОЛОВОК УРОВНЯ h2 -------------------*/
+.titul-two {
+  text-align: center;
+  margin-top: 15px;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+}
+
+@media screen and (min-width: 768px) {
+  .titul-two {
+    font-size: 48px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .titul-two {
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
+}
+
+.pretitul-two {
+  text-align: center;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  color: #ffa5ba;
+}
+
+@media screen and (min-width: 768px) {
+  .pretitul-two {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .pretitul-two {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
+}
+
 section {
   margin-left: auto;
   margin-right: auto;
