--- a/src/sass/components/_description.scss
+++ b/src/sass/components/_description.scss
@@ -1,6 +1,6 @@
 .section-description {
   background-color: rgb(255, 255, 255);
-  padding-top: 30px;
+  padding-top: 50px;
   padding-bottom: 50px;
 }
 
@@ -35,7 +35,7 @@
     display: flex;
   }
   .description-icons {
-    margin-right: 21px;
+    margin-right: 5px;
     margin-bottom: 0;
   }
 }
@@ -48,6 +48,9 @@
   .section-description {
     padding-top: 100px;
     padding-bottom: 130px;
+  }
+  .description-icons {
+    margin-right: 21px;
   }
 }
 .square {
