Итог по кнопкам

--- a/css/main.css
+++ b/css/main.css
@@ -155,10 +155,13 @@ button {
 }
 
 .btn {
-  min-width: 161px;
+  display: inline-flex;
   padding: 0 17px;
   height: 44px;
   border-radius: 22px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
   /* сюда нужно проставить правильный класс 
   для всплывающего окна хедера*/
 }
@@ -179,17 +182,11 @@ header .btn {
   }
 }
 
-.btn .btn-font {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.31;
-}
-
-.btn svg {
-  width: 3.6px;
-  height: 8px;
+.btn-icon {
+  margin-left: 8px;
+  width: 8px;
+  height: 16px;
   height: 100%;
-  stroke: #000000;
 }
 
 .appeal-one {
