--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -54,12 +54,15 @@
 }
 
 .btn {
+  display: inline-flex;
+  align-items: center;
   min-width: 161px;
   padding: 0 17px;
   height: 44px;
   border-radius: 22px;
-
-  //text-align: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
 
   /* сюда нужно проставить правильный класс 
   для всплывающего окна хедера*/
@@ -73,21 +76,21 @@
 
   @media screen and (min-width: 1200px) {
     padding: 0 37px;
-    // размер всех кнопок меняется. паддинг 35-37px
   }
+}
 
-  & .btn-font {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.31;
-  }
+.btn-icon {
+  margin-left: 8px;
+  width: 10px;
+  height: 10px;
+}
 
-  & svg {
-    width: 3.6px;
-    height: 8px;
-    height: 100%;
-    stroke: #000000;
-  }
+.next-one {
+  fill: #ffffff;
+}
+
+.next-two {
+  fill: #d41443;
 }
 
 //классы цветов
