--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -47,11 +47,22 @@
 
 /* --------------КНОПКИ БОЛЬШИЕ---------------------*/
 
-// класс размеров
+/*      
+Формат HTML для кнопок
+<button class="btn appeal-one">
+        Our Locations
+        <svg class="btn-icon next-one">
+          <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+        </svg>
+      </button>
+      <button class="btn appeal-two">
+        Our Locations
+        <svg class="btn-icon next-two">
+          <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+        </svg>
+      </button>*/
 
-.dont-worry {
-  background-color: aqua;
-}
+// класс размеров
 
 .btn {
   display: inline-flex;
