Паддинги в container desc по 35

--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -16,14 +16,11 @@
         }
 }
 
-.container {  
-    // @media screen and (min-width: 768px) {
-    // height: 460px;
-
+.container{  
     @media screen and (min-width: 1280px) {
-        padding-right: 0;
-        padding-left: 0;
-        // height: 485px;
+        width: 1280px;
+        padding-right:  35px;
+        padding-left: 35px;
     }
 }
    
@@ -37,8 +34,6 @@
         display: flex;
         flex-wrap: wrap;  
         justify-content: space-between;
-        margin-left: auto;
-        margin-right: auto;
         height: 610px;
         padding-bottom: 61px;
         margin-bottom: 0;
@@ -47,9 +42,7 @@
         display: flex;
         flex-wrap: wrap;  
         justify-content: space-between;
-        margin-left: auto;
-        margin-right: auto;
-        height: 575px;
+        height: 570px;
         margin-bottom: 86px;
         padding-bottom: 0;
     }
