--- a/src/sass/layout/_program-section.scss
+++ b/src/sass/layout/_program-section.scss
@@ -215,6 +215,7 @@
     }
 
     .program-list{
+        margin-left: 119px;
 
        &::before{
             content: " ";
@@ -225,7 +226,7 @@
             margin-right: 20px;
         
             top: 8px;
-            left: -55px;
+            left: -56px;
         }
     }
 
@@ -245,7 +246,7 @@
    
     .choose-section{
        position: absolute;
-       top: 1152px;
+       top: 1149px;
 
        left:50%; 
        margin-left:-344px;
@@ -389,7 +390,7 @@
 
     .choose-section{
        position: absolute;
-       top: 1038px;
+       top: 1042px;
 
        z-index: 100;
        left:50%; 
@@ -425,7 +426,7 @@
      .program-list::before{
         content: " ";
         height: 1px;
-        width: 1344px;
+        width: 100%;
         position: absolute;
         margin-bottom: 60px;
     
@@ -453,7 +454,7 @@
     
 }
 
-//-------------------зображення наіждає на текст----------------------
+//-------------------зображення наїждає на текст----------------------
 
 @media screen and (min-width: 1344px) and (max-width: 1598px){
     .section-program-picture{
