--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -3,6 +3,9 @@
     <h2 class="visually-hidden">location</h2>
     <ul class="list list-location">
       <li class="card">
+        <div class="label-box">
+          <span class="label label-cafe">cafe</span>
+        </div>
         <div class="card-box">
           <h3 class="title-card-location">Chicago</h3>
           <p class="description">
@@ -24,6 +27,9 @@
         </div>
       </li>
       <li class="card">
+        <div class="label-box">
+          <span class="label label-food-truck">food truck</span>
+        </div>
         <div class="card-box">
           <h3 class="title-card-location">Los Angeles</h3>
           <p class="description">
@@ -45,6 +51,9 @@
         </div>
       </li>
       <li class="card">
+        <div class="label-box">
+          <span class="label label-cafe">cafe</span>
+        </div>
         <div class="card-box">
           <h3 class="title-card-location">New York</h3>
           <p class="description">
