--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -2,7 +2,6 @@
   background-color: #fff5f6;
   padding-left: 20px;
   padding-right: 20px;
-
 }
 .footer-row {
   font-family: Titan One;
@@ -11,42 +10,43 @@
   font-size: 18px;
   line-height: 21px;
   text-transform: uppercase;
-  color: #FFA5BA;
+  color: #ffa5ba;
   margin-top: 0;
   margin-bottom: 17px;
 }
 
-ul {
+.footer-list {
   list-style: none;
   display: inline-flex;
 }
 
-h3 {
+.footer-title {
   font-family: Titan One;
-font-style: normal;
-font-weight: normal;
-font-size: 34px;
-line-height: 1.14;
-letter-spacing: 0.04em;
-text-transform: uppercase;
-color: #D41443;
-padding-right: 100px;
-padding-bottom: 43px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+  padding-right: 100px;
+  padding-bottom: 43px;
 }
-a {
+.socials-link {
   text-decoration: none;
 }
 .copyright {
   font-family: DM Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 1.52;
-text-align: center;
-color: #907E82;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.52;
+  text-align: center;
+  color: #907e82;
 }
 .footer-socials {
-  border-bottom: 1px solid #E1E1E1;
+  border-bottom: 1px solid #e1e1e1;
+  text-align: right;
 }
 .footer-text {
   display: block;
@@ -54,18 +54,31 @@ color: #907E82;
 
 .socials-item {
   position: relative;
+  width: 32px;
+  height: 32px;
+  margin-left: 28px;
 }
 .socials-icon {
   position: absolute;
-  fill: #FFFFFF;
+  fill: #ffffff;
   width: 32px;
   height: 32px;
-  background-color: #FEA5BB;
+  background-color: #fea5bb;
   border-radius: 50%;
   display: flex;
   justify-content: right;
   align-items: center;
-  
 }
-
-
+.footer-tel {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.86;
+  text-align: right;
+  color: #000000;
+  padding-bottom: 43px;
+}
+.footer-tel-span {
+  color: #d41443;
+}
