--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -60,10 +60,10 @@
 }
 .socials-icon {
   position: absolute;
-  fill: #ffffff;
+  fill: #fea5bb;
   width: 32px;
   height: 32px;
-  background-color: #fea5bb;
+  background-color: #ffffff;
   border-radius: 50%;
   display: flex;
   justify-content: right;
