--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,7 +7,7 @@
     <ul class="footer-list">
       <li class="socials-item">
         <a href="https://github.com/" class="socials-link"></a>
-        <svg class="socials-icon" width="32" height="32">
+        <svg class="socials-icon">
           <use href="./images/icons/symbol-defs.svg#icon-github.svg"></use>
         </svg>
       </li>
