--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <p class="footer-row">homemade ice cream made</p>
     <h3 class="footer-title">with passion</h3>
   </div>
-  <div class="footer-socials">
+  <div class="footer-socials testtest">
     <ul class="footer-list">
       <li class="socials-item">
         <a href="https://github.com/" class="socials-link"></a>
