add tablet and desktop

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -66,21 +66,66 @@
 
   <section class="hero-section">
     <div class="container">
-      <div class="hero-box">
-        <h1 class="hero-title">
-          ice cream <br />
-          made with
-          <span class="text">passion</span>
-        </h1>
+      <div class="upper-line">
+         <div class="hero-box">
+            <h1 class="hero-title">
+              ice cream <br />
+              made with
+              <span class="text">passion</span>
+            </h1>
 
-        <ul class="hero-buttons">
-          <li class="hero-button__item">
-            <button class="hero-button red">Products</button>
-          </li>
-          <li class="hero-button__item">
-            <button class="hero-button white">How it’s made?</button>
-          </li>
-        </ul>
+            <ul class="hero-buttons">
+              <li class="hero-button__item">
+                <button class="hero-button red">Products</button>
+              </li>
+              <li class="hero-button__item">
+                <button class="hero-button white">How it’s made?</button>
+              </li>
+            </ul>
+        </div>
+
+          <ul class="places">
+            <li class="places-item">
+                <div class="places-box">
+                    <p class="places-number">16</p>
+                    <p class="places-text">cafes</p>
+                </div>
+            </li>
+            <li class="places-item">
+                <div class="places-box">
+                    <p class="places-number">23</p>
+                    <p class="places-text">food trucks</p>
+                </div>
+            </li>
+          </ul> 
+      </div>
+
+      <div class="eco">
+        <picture>
+            <source
+                srcset="./images/hero/milk/milk-tablet@1x.png 1x, ./images/hero/milk/milk-tablet@2x.png 2x"
+                media="(min-width:740px) and (max-width:1279px)">
+
+            <source
+                srcset="./images/hero/milk/milk-desktop@1x.png 1x, ./images/hero/milk/milk-desktop@2x.png 2x"
+                media="(min-width:1280px)">
+
+            <img class="eco-img" src="./images/hero/milk/milk-tablet@1x.png" alt="milk">
+        </picture>
+
+        <div class="eco-content">
+            <p class="eco-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et
+            </p>
+
+            <a href="#" class="eco-link link">
+                <svg class="arrow-right" viewBox="0 0 100 85" width="6" height="5">
+                    <polygon
+                        points="58.263,0.056 100,41.85 58.263,83.641 30.662,83.641 62.438,51.866 0,51.866 0,31.611 62.213,31.611 30.605,0 58.263,0.056">
+                    </polygon>
+                </svg>
+            </a>
+        </div>
       </div>
     </div>
   </section>
