--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -15,7 +15,28 @@
     background-position: left calc(50% + 40px) bottom,
       left calc(50% + 46px) top 0px;
   }
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+
+    background-image: url('./../images/hero/girl/girl-tablet@1x.png'),
+      url('./../images/hero/icecream/icecream-tablet@1x.png'),
+      url('./../images/hero/eclipse.svg');
+    background-size: 168px 133px, 143px 336px, 324px 322px;
+    background-position: left calc(50% + 265px) bottom,
+      left calc(50% + 65px) bottom, left calc(50% + 85px) top 35px;
+  }
+
+  @media screen and (min-width:1280px) {
+
+    background-image: url('./../images/hero/girl/girl-desktop@1x.png'),
+      url('./../images/hero/icecream/icecream-desktop@1x.png'),
+      url('./../images/hero/eclipse.svg');
+    background-size: 293px 232px, 236px 557px, 538px 538px;
+    background-position: left calc(50% + 420px) bottom,
+      left calc(50% + 100px) bottom, left calc(50% + 130px) top 50px;
+  }
 }
+
 
 .header {
   width: 100%;
@@ -27,6 +48,11 @@
   align-items: center;
   padding-top: 6px;
   margin-bottom: 27px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 38px;
+    margin-bottom: 0px;
+  }
 }
 
 .nav-list {
@@ -109,6 +135,22 @@
   fill: getColor(title);
 }
 
+.upper-line {
+  display: flex;
+  justify-content: space-between;
+
+  @media screen and (min-width: 768px) {
+    padding-right: 7px;
+    
+  }
+
+  @media screen and (min-width: 1280px) {
+    
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+}
+
 .hero-title {
   margin: 0;
   margin-bottom: 19px;
@@ -121,9 +163,31 @@
   text-transform: uppercase;
   color: getColor(white-color);
 
+  @media screen and (min-width: 768px) {
+    max-width: 180px;
+    font-size: 22px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    max-width: 277px;
+    font-size: 24px;
+  }
+
   .text {
     font-size: 42px;
     color: getColor(title);
+
+    @media screen and (min-width: 260px) {
+      font-size: 48px;
+    }
+
+    @media screen and (min-width: 768px) {
+      font-size: 37px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 58px;
+    }
   }
 }
 
@@ -156,4 +220,148 @@
 
     background-color: getColor(white-color);
   }
+}
+
+.places {
+  @media screen and (max-width: 739px) {
+    display: none;
+  }
+}
+
+.places-item {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(40%, -30%);
+    z-index: 0;
+    content: '';
+    display: block;
+
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: getColor(white-color);
+
+    @media screen and (min-width: 1280px) {
+      width: 30px;
+      height: 30px;
+    }
+  }
+}
+
+.places-item:not(:last-child) {
+  margin-bottom: 17px;
+
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 20px;
+  }
+}
+
+.places-box {
+  text-align: right;
+}
+
+.places-number {
+  position: relative;
+  z-index: 5;
+
+  font-family: 'Titan One', sans-serif;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+
+  color: getColor(title);
+
+  @media screen and (min-width: 1280px) {
+    font-size: 46px;
+    line-height: 1.13;
+  }
+}
+
+.places-text {
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.25;
+
+  color: getColor(white-color);
+
+  @media screen and (min-width: 1280px) {
+    font-size: 14px;
+    line-height: 1.3;
+  }
+}
+
+.eco {
+  display: flex;
+  align-items: flex-end;
+
+  @media screen and (max-width: 739px) {
+    display: none;
+  }
+}
+
+.eco-content {
+  max-width: 115px;
+  padding-bottom: 6px;
+
+  @media screen and (min-width:1280px) {
+    max-width: 200px;
+    padding-bottom: 11px;
+  }
+}
+
+.eco-img {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: inline-block;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-right: 30px;
+  }
+}
+
+.eco-text {
+  margin-bottom: 7px;
+
+  font-family: 'DM Sans', sans-serif;
+
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.5;
+
+  color: getColor(white-color);
+
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 20px;
+
+    font-size: 14px;
+    line-height: 1.4;
+  }
+}
+
+.eco-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 18px;
+  height: 18px;
+  background-color: getColor(white-color);
+  border-radius: 50%;
+
+  @media screen and (min-width: 1280px) {
+    width: 26px;
+    height: 26px;
+  }
+}
+
+.arrow-right {
+  fill: getColor(title);
 }
