--- a/src/sass/components/_modal-button.scss
+++ b/src/sass/components/_modal-button.scss
@@ -30,6 +30,7 @@
   display: flex;
   flex-direction: column;
   width: 250px;
+  max-height: 502px;
   height: 100%;
   padding-top: 60px;
   background-color: inherit;
