пофиксин бекграунд для мобильного

--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -3,6 +3,19 @@
   padding-top: 125px;
   padding-bottom: 145px;
   background-color: $secondaryBgColor;
+
+  @include for-size(mobile-only) {
+    background-image: url('../images/manufacture/sectionbg1-mobile.png');
+    background-repeat: no-repeat;
+    background-size: 100% 133px;
+    background-position: 0 42%;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/manufacture/sectionbg1-mobile@2x.png');
+    }
+  }
   @include for-size(tablet) {
     padding-top: 120px;
     padding-bottom: 246px;
@@ -10,6 +23,15 @@
   @include for-size(desktop) {
     padding-top: 125px;
     padding-bottom: 310px;
+    background-image: url('../images/manufacture/sectionbg1-desktop.png');
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: 0 42%;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/manufacture/sectionbg1-desktop@2x.png');
+    }
   }
   .subtitle {
     margin-bottom: 15px;
@@ -19,6 +41,7 @@
     margin-left: (59px -20px);
   }
 }
+
 .primary-text-manufacture {
   font-family: 'DM Sans' sans-serif;
   font-weight: 500;
@@ -43,7 +66,6 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 1.62;
-  /* or 19px */
 
   color: $secondaryTextColor;
   padding-left: (51px -20px);
@@ -59,26 +81,7 @@
     line-height: 1.94;
   }
 }
-//   @include for-size(mobile-only) {
-//     background-image: url('../images/manufacture/sectionbg1-mobile.png');
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: url('../images/manufacture/sectionbg1-mobile@2x.png');
-//     }
-//   }
 
-//     background-image: url('../images/manufacture/sectionbg1-desktop.png');
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: url('../images/manufacture/sectionbg1-desktop@2x.png');
-//     }
-//   }
-//   background-repeat: no-repeat;
-//   background-position: right 0 left 0 bottom 0;
-//   background-size: cover;
-// }
 .button-manufacture {
   margin-top: 0;
   margin-bottom: 37px;
