--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -3,6 +3,7 @@
   <div class="container">
     <h3 class="subtitle">tradition and love</h3>
     <h2 class="title">how it’s made?</h2>
+
     <picture>
       <source
         srcset="
@@ -27,19 +28,20 @@
         alt="cow and milk"
       />
     </picture>
-    <p class="primary-text-manufacture">
-      Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-      cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo
-      fringilla.
-    </p>
+    <div class="text">
+      <p class="primary-text-manufacture">
+        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+        cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+        justo fringilla.
+      </p>
 
-    <p class="secondary-text-manufacture">
-      Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-      Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-      suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-      tincidunt. Aliquam erat volutpat. Aenean accumsan.
-    </p>
-
+      <p class="secondary-text-manufacture">
+        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+        Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+        suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+        tincidunt. Aliquam erat volutpat. Aenean accumsan.
+      </p>
+    </div>
     <button class="button-secondary button-milk button-manufacture">
       Read more
     </button>
