--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -9,15 +9,6 @@
   padding-bottom: 77px;
   background-repeat: no-repeat;
 
-  // @media screen and (min-width: 768px) {
-  // }
-  // @media screen and (min-width: 1344px) {
-  //   padding-bottom: 106px;
-  // }
-  // @media screen and (max-width: 767px) {
-  // }
-
-  background-repeat: no-repeat;
   background-image: url('../images/wave/wave-min.png');
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -35,6 +26,7 @@
     }
   }
   @media screen and (min-width: 1344px) {
+    padding-top: 45px;
     padding-bottom: 106px;
     background-image: url('../images/wave/wave-desc-min.png');
     @media screen and (min-device-pixel-ratio: 2),
@@ -47,14 +39,9 @@
 // }
 
 .hero.container {
-  // margin-bottom: 77px;
   @media screen and (min-width: 768px) {
     display: flex;
   }
-  @media screen and (min-width: 1344px) {
-    // max-width: 100%;
-  }
-  // padding-bottom: 77px;
 }
 .hero__details {
   @media screen and (max-width: 76px) {
@@ -67,7 +54,6 @@
   @media screen and (min-width: 1344px) {
     width: 642px;
     margin-top: 79px;
-    // margin-left: 1px;
   }
 }
 
@@ -93,15 +79,9 @@
   @include font(500, 14px, 1.571);
   letter-spacing: 0.08em;
   margin-bottom: 30px;
-  // @media screen and (min-width: 320px) and (max-width: 1344px) {
-  //   white-space: pre-line;
-  // }
   .hard {
     color: var(--grey-color);
   }
-  // .promise {
-  //   white-space: nowrap;
-  // }
   .score {
     color: var(--accent-color);
     white-space: nowrap;
@@ -117,9 +97,6 @@
   margin-right: auto;
   margin-left: auto;
   background-color: var(--accent-color);
-  // @include font(bold, 12px, 0.25);
-  // font-style: normal;
-  // text-align: center;
   min-width: 260px;
   height: 48px;
   border-width: 0px;
@@ -141,7 +118,6 @@
 .hero__link {
   font-style: normal;
   text-align: center;
-  // padding: 26px;
   color: #ffffff;
   letter-spacing: 0.08em;
   text-transform: uppercase;
@@ -159,7 +135,6 @@
   }
 }
 .hero__picture {
-  // z-index: 1;
   margin-right: auto;
   margin-left: auto;
   @media screen and (min-width: 300px) and (max-width: 767px) {
@@ -173,8 +148,8 @@
     height: 320.64px;
   }
   @media screen and (min-width: 1344px) {
-    // margin-right: -172px;
-
+    padding-right: -142px;
+    margin-right: -142px;
     width: 841.55px;
     height: 718.14px;
   }
@@ -187,7 +162,7 @@
     height: 177.5px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
     width: 375.75px;
     height: 320.64px;
   }
