--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -9,7 +9,7 @@
                     src="./images/feedbacksfooter/mob/Ellipse8@1x.jpg" alt="Выпускница Лиза">
                 <a href="">
                     <svg class="reviews-svg" width="30" height="17">
-                        <use href="./images/sprite.svg#vk">
+                        <use href="./images/spryite-footer.svg#icon-Vector-1-1">
                         </use>
                     </svg>
                 </a>
@@ -35,13 +35,13 @@
 
             <a class="left-strelka" href="">
                 <svg class="reviews-svg" width="25" height="17">
-                    <use href="./images/sprite.svg#arrow-1">
+                    <use href="./images/spryite-footer.svg#icon-Arrow-1-1">
                     </use>
                 </svg>
             </a>
             <a class="right-strelka" href="">
                 <svg class="reviews-svg" width="25" height="17">
-                    <use href="./images/sprite.svg#arrow-2">
+                    <use href="./images/spryite-footer.svg#icon-Arrow-2-1">
                     </use>
                 </svg>
             </a>
@@ -51,7 +51,7 @@
             <li class="reviews-item">
                 <a class="reviews-right" href="">
                     <svg class="reviews-svg" width="25" height="17">
-                        <use href="./images/sprite.svg#arrow-1">
+                        <use href="./images/spryite-footer.svg#icon-Arrow-1-1">
                         </use>
                     </svg>
                 </a>
@@ -67,7 +67,7 @@
                     src="./images/feedbacksfooter/mob/Ellipse11@1x.jpg" alt="Выпускница Елена">
                 <a class="reviews-left" href="">
                     <svg class="reviews-svg" width="25" height="17">
-                        <use href="./images/sprite.svg#arrow-2">
+                        <use href="./images/spryite-footer.svg#icon-Arrow-2-1">
                         </use>
                     </svg>
                 </a>
