--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -21,14 +21,14 @@
         <div class="footer-logo">
             <a href="./index.html">
                 <svg class="footer-log" width="84.12" height="30">
-                    <use xlink:href="./images/sprite.svg#logo-black"></use>
+                    <use href="./images/spryite-footer.svg#icon-logo-1"></use>
                 </svg>
             </a>
         </div>
         <div class="footer-tell">
             <a class="footer-tel" href="tel:+38(000)0000000">
                 <svg class="footer-svg" width="20" height="19.21">
-                    <use href="./images/sprite.svg#phone">
+                    <use href="./images/spryite-footer.svg#icon-Vector-2">
                     </use>
                 </svg>
                 +38 (000) 000 00 00
