Add tiny change for slider

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -15,6 +15,9 @@
             weather by enjoying your favorite slice of hot pie accompanied by
             your favorite flavor of ice cream.
           </p>
+          <div class="slider-inside">
+            <div class="slider-gradient"></div>
+          </div>
         </div>
         <ul class="reviews-dots">
           <li class="dots-item">
@@ -60,6 +63,9 @@
             help make breakups, heartaches, and other major causes of sadness
             easier to get through.
           </p>
+          <div class="slider-inside">
+            <div class="slider-gradient"></div>
+          </div>
         </div>
         <ul class="reviews-dots">
           <li class="dots-item">
@@ -104,6 +110,9 @@
             Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
             ipsum primis in nibh vel risus.
           </p>
+          <div class="slider-inside">
+            <div class="slider-gradient"></div>
+          </div>
         </div>
         <ul class="reviews-dots">
           <li class="dots-item">
