--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -7,7 +7,7 @@
   @include for-size(mobile-only) {
     background-image: url('../images/manufacture/sectionbg1-mobile.png');
     background-repeat: no-repeat;
-    background-size: 100% 133px;
+    background-size: 100% 10%;
     background-position: 0 42%;
 
     @media screen and (min-device-pixel-ratio: 2),
@@ -36,6 +36,7 @@
   .subtitle {
     margin-bottom: 15px;
   }
+
   .title {
     margin-bottom: 26px;
     margin-left: (59px -20px);
@@ -108,6 +109,20 @@
 }
 .list-manufacture {
   padding-right: 70px;
+  @include for-size(tablet) {
+    display: flex;
+    justify-content: center;
+  }
+  .item + .item {
+    margin-left: 60px;
+  }
+  @include for-size(desktop) {
+    display: flex;
+    justify-content: center;
+  }
+  .item + .item {
+    margin-left: 30px;
+  }
 }
 .number-manufacture {
   font-family: 'Titan One', sans-serif;
